test/corpus/error_recovery.txt
==================
Invalid Optional Argument in Function Call
==================

foo(?x);

---

(source_file
  (statement
    (expression_statement
      (expression
        (call_expression
          (identifier)
          (ERROR)
          (arg_list
            (arg_item
              (expression
                (identifier)))))))))

==================
Invalid Standalone Length in If
==================

if ($)
  $;
endif

---

(source_file
  (statement
    (if_statement
      (expression
        (prop_access
          (MISSING identifier)))
      (ERROR)
      (statement))))

==================
Optional Scatter Default Requires Question Mark
==================

{target, source, message, type = "chat"} = args;

---

(source_file
  (statement
    (expression_statement
      (expression
        (list_literal
          (arg_list
            (arg_item
              (expression
                (identifier)))
            (arg_item
              (expression
                (identifier)))
            (arg_item
              (expression
                (identifier)))
            (arg_item
              (expression
                (assignment
                  (identifier)
                  (expression
                    (string))))))))
      (ERROR
        (identifier)))))

==================
Keyword in Function Call Argument
==================

notify(if);

---

(source_file
  (statement
    (expression_statement
      (expression
        (call_expression
          (identifier)
          (arg_list
            (arg_item
              (expression
                (error)))))))))

==================
Keyword in For Loop Variable
==================

for if in (x)
endfor

---

(source_file
  (statement
    (for_statement
      (error)
      (expression
        (identifier)))))

==================
Keyword in Direct Property Access
==================

me.if;

---

(source_file
  (statement
    (expression_statement
      (expression
        (prop_access
          (expression
            (identifier))
          (error))))))

==================
Keyword in Direct Verb Call
==================

me:if();

---

(source_file
  (statement
    (expression_statement
      (expression
        (verb_call
          (expression
            (identifier))
          (error))))))
